2007-04-11 14:06 -0700  Brendan Cully  <brendan@kublai.com>  (5393c104e08a)

	* mkchangelog.sh: Remove un-POSIX TZ NOOP in mkchangelog.sh (see
	#1615)

	* account.c, globals.h, init.h: Add $smtp_pass (closes #2116)

	* doc/Makefile.am: Explicit -j1 breaks some versions of make (see
	#2538)

	* imap/util.c: Make imap_hcache_open robust against missing
	idata->ctx

	* imap/util.c: Do not attempt to parse idata->ctx->path if an explicit
	path is given

2007-04-10 20:22 -0700  Brendan Cully  <brendan@kublai.com>  (429fb67340cd)

	* UPDATING, imap/imap.c, imap/imap_private.h, imap/message.c,
	init.h, mutt.h: Add $message_cache_clean option to prune message
	cache on sync

	* hcache.c: Try to unlink old header cache if open fails

	* bcache.c, imap/imap.c, imap/util.c, lib.c: Fix some warnings

	* hcache.c: Refactor mutt_hcache_open to share more code

	* hcache.c: Save some stats when header cache already exists

	* hcache.c, imap/imap.c, imap/imap_private.h, imap/message.c,
	imap/util.c: Make IMAP header cache layout match body cache. You can
	now make them point to the same directory. Each folder will have a
	folder.hcache file for the header cache.

	* hcache.c, hcache.h, imap/imap.c, imap/util.c, mh.c, pop.c: Add
	hcache path name hook

	* bcache.c, url.c, url.h: Simplify body cache path creation

	* imap/imap.c, imap/imap_private.h, imap/message.c, imap/util.c:
	Do not hold hcache open while mailbox is open - it can lead to
	lockups

	* imap/command.c, imap/imap.c, imap/imap_private.h, imap/util.c: Add
	imap_hcache_del; minor cleanups

	* main.c: Fix a compiler warning

	* rfc3676.c: Don't use $indent_string to quote replies to flowed
	messages (closes #2874).

2007-04-10 10:16 -0700  Petr Písař  <petr.pisar@atlas.cz>  (af01580c9a08)

	* po/cs.po: Updated Czech translation

2007-04-10 10:13 -0700  Brendan Cully  <brendan@kublai.com>  (9bbf304e09bc)

	* rfc3676.c: Wrap flowed lines at no more than FLOWED_MAX in
	replies
